--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-plugin-import": "^1.8.0",
     "file-saver": "^1.3.8",
     "iview": "^3.0.0",
     "vue": "^2.5.17",
